@@ -9,11 +9,7 @@
   <bookinfo>
     <title>VIPS Reference Manual</title>
     <releaseinfo>
-<<<<<<< HEAD
       For VIPS 8.2.0.
-=======
-      For VIPS 8.1.1.
->>>>>>> 8.1
       The latest version of this documentation can be found on the 
       <ulink role="online-location"
         url="http://www.vips.ecs.soton.ac.uk/index.php?title=Documentation">VIPS website</ulink>.
